--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,12 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./data:/data
+      - database-data:/data
       
   checksum-service:
     build: ./checksum-service
     ports:
       - "5001:5000"
+
+volumes:
+  database-data:
